Closed
Bug 482976
Opened 17 years ago
Closed 17 years ago
Crash [@ nsTextFrame::Reflow] on print preview with quote
Categories
(Core :: Layout, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: martijn.martijn, Assigned: smaug)
References
(Blocks 1 open bug)
Details
(4 keywords, Whiteboard: regressed by 425265)
Crash Data
Attachments
(3 files)
|
3 bytes,
text/html
|
Details | |
|
2.94 KB,
patch
|
Details | Diff | Splinter Review | |
|
14.23 KB,
patch
|
roc
:
review+
roc
:
superreview+
beltzner
:
approval1.9.1+
|
Details | Diff | Splinter Review |
See testcase, which crashes on print preview in current trunk build.
It doesn't crash in a 2009-03-08 build, it does crash in a 2009-03-09 build:
http://hg.mozilla.org/mozilla-central/pushloghtml?startdate=2009-03-08+04%3A00%3A00&enddate=2009-03-09+05%3A00%3A00
Regression from bug 425265 somehow?
| Reporter | ||
Comment 1•17 years ago
|
||
http://crash-stats.mozilla.com/report/index/bd7a77fd-93c8-4f4b-a88d-1ae592090312?p=1
0 xul.dll nsTextFrame::Reflow layout/generic/nsTextFrameThebes.cpp:5832
1 xul.dll nsLineLayout::ReflowFrame layout/generic/nsLineLayout.cpp:852
2 xul.dll nsInlineFrame::ReflowInlineFrame layout/generic/nsInlineFrame.cpp:619
3 xul.dll nsInlineFrame::ReflowFrames layout/generic/nsInlineFrame.cpp:497
4 xul.dll nsInlineFrame::Reflow layout/generic/nsInlineFrame.cpp:384
5 xul.dll nsLineLayout::ReflowFrame layout/generic/nsLineLayout.cpp:852
6 xul.dll nsInlineFrame::ReflowInlineFrame layout/generic/nsInlineFrame.cpp:619
7 xul.dll nsInlineFrame::ReflowFrames layout/generic/nsInlineFrame.cpp:497
8 xul.dll nsInlineFrame::Reflow layout/generic/nsInlineFrame.cpp:384
9 xul.dll nsLineLayout::ReflowFrame layout/generic/nsLineLayout.cpp:852
10 xul.dll nsBlockFrame::ReflowInlineFrame layout/generic/nsBlockFrame.cpp:3600
11 xul.dll nsBlockFrame::DoReflowInlineFrames layout/generic/nsBlockFrame.cpp:3421
12 xul.dll nsBlockFrame::ReflowInlineFrames layout/generic/nsBlockFrame.cpp:3268
13 xul.dll nsBlockFrame::ReflowLine layout/generic/nsBlockFrame.cpp:2323
14 xul.dll nsBlockFrame::ReflowDirtyLines layout/generic/nsBlockFrame.cpp:1903
15 xul.dll nsBlockFrame::Reflow layout/generic/nsBlockFrame.cpp:944
16 xul.dll nsBlockReflowContext::ReflowBlock layout/generic/nsBlockReflowContext.cpp:310
17 xul.dll nsBlockFrame::ReflowBlockFrame layout/generic/nsBlockFrame.cpp:2996
18 xul.dll nsBlockFrame::ReflowLine layout/generic/nsBlockFrame.cpp:2268
19 xul.dll nsBlockFrame::ReflowDirtyLines layout/generic/nsBlockFrame.cpp:1903
20 xul.dll nsBlockFrame::Reflow layout/generic/nsBlockFrame.cpp:944
21 xul.dll nsContainerFrame::ReflowChild layout/generic/nsContainerFrame.cpp:821
22 xul.dll CanvasFrame::Reflow layout/generic/nsHTMLFrame.cpp:656
23 @0x2e03fbf
| Assignee | ||
Updated•17 years ago
|
Assignee: nobody → Olli.Pettay
| Assignee | ||
Comment 2•17 years ago
|
||
I need to test this still some more.
But something like this is needed, because quotes and counters are
calculated after frame creation.
| Assignee | ||
Comment 3•17 years ago
|
||
Init the fragment for printing lazily when first time used, this way
quotes and counters can be supported.
The crash fix is the change to nsTextFrame::GetInFlowContentLength.
Attachment #367781 -
Flags: superreview?(roc)
Attachment #367781 -
Flags: review?(roc)
Attachment #367781 -
Flags: superreview?(roc)
Attachment #367781 -
Flags: superreview+
Attachment #367781 -
Flags: review?(roc)
Attachment #367781 -
Flags: review+
| Assignee | ||
Comment 4•17 years ago
|
||
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•17 years ago
|
Attachment #367781 -
Flags: approval1.9.1?
Updated•17 years ago
|
Attachment #367781 -
Flags: approval1.9.1? → approval1.9.1+
| Assignee | ||
Comment 5•17 years ago
|
||
| Assignee | ||
Updated•17 years ago
|
Keywords: fixed1.9.1
Comment 6•17 years ago
|
||
Flagging for 1.9.0.x because of the regression, bug 472389.
Flags: wanted1.9.0.x?
Comment 7•17 years ago
|
||
verified FIXED on builds: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2a1pre) Gecko/20090422 Minefield/3.6a1pre ID:20090422044118
and
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1b4pre) Gecko/20090422 Shiretoko/3.5b4pre ID:20090422042031
Status: RESOLVED → VERIFIED
Keywords: fixed1.9.1 → verified1.9.1
Comment 8•17 years ago
|
||
(In reply to comment #6)
> Flagging for 1.9.0.x because of the regression, bug 472389.
I don't get that. Looks like 472389 affects 3.0.x, so how could it be a regression from this bug which is itself a regression fix for another fix that has not yet landed on 1.9.0.x?
Flags: blocking1.9.0.12+
Whiteboard: regressed by 425265
Updated•17 years ago
|
Flags: wanted1.9.0.x? → wanted1.9.0.x+
Updated•17 years ago
|
Flags: blocking1.9.0.12+ → blocking1.9.0.12?
Updated•17 years ago
|
Flags: wanted1.9.0.x+
Flags: blocking1.9.0.12?
Updated•16 years ago
|
Updated•16 years ago
|
Updated•15 years ago
|
Crash Signature: [@ nsTextFrame::Reflow]
You need to log in
before you can comment on or make changes to this bug.
Description
•