 Bug 482976 -  Crash [@ nsTextFrame::Reflow] on print preview with quote, r+sr=roc