layout/base/nsLayoutUtils.h
@@ -62,6 +62,7 @@ class nsIFontMetrics;
 #include "nsIPresShell.h"
 
 class nsBlockFrame;
+class nsTextFragment;
 
 /**
  * nsLayoutUtils is a namespace class used for various helper
@@ -960,19 +961,10 @@ public:
   static PRBool sDisableGetUsedXAssertions;
 
   /**
-   * Initilizes text run container for printing. Does *nothing* if
-   * aFrame->PresContext() is dynamic.
-   * @param aContainerContent The nsIContent object from which aFrame gets data
-   *                          for text run creation.
-   * @param aFrame            The nsIFrame object which is being initialized.
-   * @param aBits             Frame type dependent bits which will be set to
-   *                          aFrame to mark that PresContext has a text fragment
-   *                          property called nsGkAtoms::clonedTextForPrint for
-   *                          aContent.
+   * Returns the text fragment, which aFrame should use for printing.
+   * @param aFrame The nsIFrame object, which uses text fragment data.
    */
-  static nsresult InitTextRunContainerForPrinting(nsIContent* aContainerContent,
-                                                  nsIFrame* aFrame,
-                                                  nsFrameState aBits);
+  static nsTextFragment* GetTextFragmentForPrinting(const nsIFrame* aFrame);
 };
 
 class nsAutoDisableGetUsedXAssertions
